Git_WGBH_QC/src/objects/Program__c.object
<CustomObject>
    <description>These are the programs that are showing on TV or playing on the radio.</description>
    <fields>
        <fullName>Genre__c</fullName>
        <label>Genre</label>
        <picklist>
            <controllingField>Interest_Topic__c</controllingField>
            <picklistValues>
                <fullName>Aging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancient &amp; Classical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antiques &amp; Collectibles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archeaology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts &amp; Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astronomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biography &amp; Profiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biology &amp; Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business &amp; Economy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caregiving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civilizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications &amp; Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy &amp; Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enlightenment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Film &amp; Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fitness &amp; Nutrition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folk Art &amp; Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forensics &amp; Investigations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fun &amp; Games</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Topic__c</fullName>
        <label>Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Arts &amp; Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culture &amp; Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; How-to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News &amp; Public Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science &amp; Nature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PBS_Program_Code__c</fullName>
        <label>PBS Program Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates whether the Show is a Series.</description>
        <label>Series</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jazz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comedy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gameshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>@89.7, @GBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programming, events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPhone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>directTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sattelite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>interest_1__c</fullName>
        <description>Interest 1</description>
        <inlineHelpText>Interest 1</inlineHelpText>
        <label>Interest 1</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interest_2__c</fullName>
        <description>Interest 2</description>
        <inlineHelpText>Interest 2</inlineHelpText>
        <label>Interest 2</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interest_3__c</fullName>
        <description>Interest 3</description>
        <inlineHelpText>Interest 3</inlineHelpText>
        <label>Interest 3</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>program_description__c</fullName>
        <description>Program Description</description>
        <inlineHelpText>Program Description</inlineHelpText>
        <label>Program Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>program_type__c</fullName>
        <inlineHelpText>Program Genre for each program type i.e. Childrens, British Comedy</inlineHelpText>
        <label>Program Genre</label>
        <picklist>
            <picklistValues>
                <fullName>British Comedy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Drama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comedy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Film</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>How-To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instructional TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Studio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motivational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performing Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Affairs (local)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Affairs (national)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Game Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gifts Use Only - Major Gift Prog.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music Porgramming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooking program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celtic Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money/Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diet/Nutrition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>program_type_value__c</fullName>
        <description>Program Type</description>
        <inlineHelpText>Program Type</inlineHelpText>
        <label>Program Type Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ta_program_id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Program Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Program/Show</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>program_description__c</columns>
        <columns>PBS_Program_Code__c</columns>
        <columns>program_type__c</columns>
        <columns>ta_program_id__c</columns>
        <columns>interest_1__c</columns>
        <columns>interest_2__c</columns>
        <columns>interest_3__c</columns>
        <columns>program_type_value__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2011 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Programs_with_Missing_Detail</fullName>
        <columns>NAME</columns>
        <columns>program_description__c</columns>
        <columns>program_type__c</columns>
        <columns>program_type_value__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>program_description__c</field>
            <operation>equals</operation>
        </filters>
        <label>Programs with Missing Detail</label>
    </listViews>
    <nameField>
        <label>Program Show Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IA0000001C2hGMAS_00NQ0000000mKu9MAE</fullName>
        <active>true</active>
        <field>Bios__c.Program_Show__c</field>
        <filterItems>
            <field>Program__c.Series__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Bio_Program/Show</name>
    </namedFilters>
    <pluralLabel>Programs/Shows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>